--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,8 +20,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SubiteSV">
         <activity
-            android:name=".actividades.cliente.ActualizarPerfilActivity" android:parentActivityName=".actividades.cliente.MapClienteActivity"
+            android:name=".actividades.conductor.ActualizarPerfilConductorActivity" android:parentActivityName=".actividades.conductor.MapaConductorActivity"
             android:exported="false" />
+        <activity
+            android:name=".actividades.cliente.ActualizarPerfilActivity"
+            android:exported="false"
+            android:parentActivityName=".actividades.cliente.MapClienteActivity" />
         <activity
             android:name=".actividades.conductor.NotificacionReservaActivity"
             android:exported="false" />
