--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,6 @@ dependencies {
     implementation 'com.airbnb.android:lottie:4.2.0'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'id.zelory:compressor:2.1.1'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.google.maps.android:android-maps-utils:2.3.0'
 }
