--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SubiteSV">
         <activity
-            android:name=".actividades.conductor.ActualizarPerfilConductorActivity" android:parentActivityName=".actividades.conductor.MapaConductorActivity"
+            android:name=".actividades.conductor.DetalleHistorialReservaConductorActivity"
             android:exported="false" />
+        <activity
+            android:name=".actividades.cliente.DetalleHistorialReservaClienteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".actividades.conductor.HistorialReservaConductorActivity"
+            android:exported="false"
+            android:parentActivityName=".actividades.conductor.MapaConductorActivity" />
+        <activity
+            android:name=".actividades.cliente.HistorialReservaClienteActivity"
+            android:exported="false"
+            android:parentActivityName=".actividades.cliente.MapClienteActivity" />
+        <activity
+            android:name=".actividades.conductor.ActualizarPerfilConductorActivity"
+            android:exported="false"
+            android:parentActivityName=".actividades.conductor.MapaConductorActivity" />
         <activity
             android:name=".actividades.cliente.ActualizarPerfilActivity"
             android:exported="false"
