--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,15 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 
+
+
+    implementation 'io.github.florent37:shapeofview:1.4.7'
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    implementation 'com.firebaseui:firebase-ui-database:8.0.1'
     implementation 'com.firebase:geofire-android:2.2.0'
     implementation 'com.google.firebase:firebase-messaging:20.1.0'
     //implementation 'com.google.firebase:firebase-analytics'
@@ -58,5 +66,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.airbnb.android:lottie:4.2.0'
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
+    implementation 'id.zelory:compressor:2.1.1'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.google.maps.android:android-maps-utils:2.3.0'
 }
