--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.ksp.subitesv">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,6 +20,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SubiteSV">
+        <activity
+            android:name=".actividades.conductor.DetalleHistorialReservaConductorActivity"
+            android:exported="false" />
+        <activity
+            android:name=".actividades.cliente.DetalleHistorialReservaClienteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".actividades.conductor.HistorialReservaConductorActivity"
+            android:exported="false"
+            android:parentActivityName=".actividades.conductor.MapaConductorActivity" />
+        <activity
+            android:name=".actividades.cliente.HistorialReservaClienteActivity"
+            android:exported="false"
+            android:parentActivityName=".actividades.cliente.MapClienteActivity" />
+        <activity
+            android:name=".actividades.conductor.ActualizarPerfilConductorActivity"
+            android:exported="false"
+            android:parentActivityName=".actividades.conductor.MapaConductorActivity" />
+        <activity
+            android:name=".actividades.cliente.ActualizarPerfilActivity"
+            android:exported="false"
+            android:parentActivityName=".actividades.cliente.MapClienteActivity" />
         <activity
             android:name=".actividades.conductor.NotificacionReservaActivity"
             android:exported="false" />
@@ -48,6 +77,10 @@
             android:name=".actividades.cliente.SolicitarConductorActivity"
             android:exported="false" />
         <activity
+            android:name=".actividades.conductor.RegistroConductorActivity"
+            android:exported="false"
+            tools:ignore="MissingClass" />
+        <activity
             android:name=".actividades.cliente.DetallesSolicitudActivity"
             android:exported="false" />
         <activity
@@ -55,9 +88,6 @@
             android:exported="false" />
         <activity
             android:name=".actividades.cliente.MapClienteActivity"
-            android:exported="false" />
-
-            android:name=".actividades.conductor.RegistroConductorActivity"
             android:exported="false" />
         <activity
             android:name=".actividades.MainActivity"
